chore: squash gitaction related commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       {{ month }}
     </option>
   </select>
-  <span>{{ selectedYear }}</span>
+  <span class="year">{{ selectedYear }}</span>
 </div>
 
 <br />
