--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,22 @@
 .date-container {
-  background-color: white;
   display: flex;
   height: fit-content;
+  width: 268px;
 
   margin-bottom: 10px;
-  
+
   & > * {
-    font-size: 40px;
+    font-size: 30px;
+    background-color: white;
   }
 
   select {
     margin-right: 10px;
+  }
+
+  .year {
+    border: 1px solid;
+    width: 100%;
+    text-align: center;
   }
 }
